# openai-commandchat

./: LICENSE  README-zh.md  README.md  cc  pyproject.toml  requirements.txt  setup.py
command/: __main__.py
commons/: config.py
configuration/: profile_config.py
occ/: CommandChat.py  ConvertLogToMarkDown.py
occ/command/: __main__.py
occ/commons/: config.py
occ/configuration/: profile_config.py
occ/utils/: logger.py
openai/: CommandChat.py
utils/: CommonUtil.py  logger.py
